# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-disagg-protocol"
version = "0.1.0"
edition.workspace = true
description = "Shared protocol types for KVBM conditional disaggregation."
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

kvbm-common = { workspace = true }
velo-common = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
