# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-engine"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed coordination primitives for KVBM"

[dependencies]
kvbm-common = { workspace = true }
kvbm-config = { workspace = true }
kvbm-kernels = { workspace = true }
kvbm-logical = { workspace = true }
kvbm-physical = { workspace = true }
velo = { workspace = true }

# Workspace deps
dynamo-tokens = { workspace = true }
dynamo-memory = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Non-workspace
async-stream = "0.3"
async-trait = "0.1"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
bytes = "1.10"
crossbeam-queue = "0.3"
derive-getters = "0.5"
lru = "0.16"
oneshot = "0.1.11"

# Optional
cudarc = { workspace = true, optional = true }
nixl-sys = { version = "=0.10.0", optional = true }
aws-sdk-s3 = { version = "1.120.0", optional = true }
aws-config = { version = "1.8.11", optional = true }
rayon = { version = "1", optional = true }
tokio-rayon = { version = "2", optional = true }
chrono = { version = "0.4", optional = true }
async-nats = { workspace = true, optional = true }
flume = { version = "0.11", optional = true }

[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:rayon", "dep:tokio-rayon", "dep:chrono"]
collectives = ["dep:nixl-sys", "nccl"]
nccl = ["dep:cudarc"]
testing-nccl = ["collectives"]
nats = ["dep:async-nats", "dep:flume"]
testing = ["kvbm-logical/testing", "kvbm-physical/testing"]
nvtx = ["kvbm-config/nvtx"]
