# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed coordination primitives for KVBM"

[dependencies]
kvbm-common = { workspace = true }
kvbm-config = { workspace = true }
kvbm-consolidator = { workspace = true }
kvbm-logical = { workspace = true }
kvbm-observability = { workspace = true }
# kvbm-physical's own `default = ["cuda"]` is suppressed at the workspace
# level (`default-features = false` on the workspace dep). Each consumer
# selects the backend explicitly via their own `cuda` / `xpu-sycl`
# features, which forward to `kvbm-physical/cuda` or
# `kvbm-physical/xpu-sycl`. Without this, a workspace build with
# `--no-default-features --features xpu-sycl` on kvbm-engine would still
# pull `kvbm-physical/cuda` via feature unification, mixing the
# `#[cfg(feature = "cuda")] cuda_stream` field on `TransferOptions`
# with engine call sites that don't initialize it.
kvbm-physical = { workspace = true }
# `client` enables LeaderControlClient, used by the remote-search driver to
# open/close transfer sessions on remote holders.
kvbm-protocols = { workspace = true, features = ["client"] }
kvbm-runtime = { workspace = true }
prometheus = { workspace = true }
velo = { workspace = true }

# Workspace deps
dynamo-memory = { workspace = true }
dynamo-device = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Non-workspace
bytes = "1.10"
crossbeam-queue = "0.3"
oneshot = "0.1.11"

# Optional
# Worker-side event/stream primitives now live in `dynamo-device`, so the
# engine no longer needs cudarc unconditionally. The remaining users are
# the NCCL collectives shims (`collectives/{bootstrap,nccl}.rs`), which
# already cfg-gate on `feature = "nccl"`. Mirrors the oneCCL gating below.
cudarc = { workspace = true, optional = true, features = ["nccl"] }
oneapi-rs = { workspace = true, optional = true }
aws-sdk-s3 = { version = "1.120.0", optional = true }
aws-config = { version = "1.8.11", optional = true }
rayon = { version = "1", optional = true }
tokio-rayon = { version = "2", optional = true }
chrono = { version = "0.4", optional = true }
async-nats = { workspace = true, optional = true }
flume = { version = "0.11", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
figment = { version = "0.10", features = ["env", "toml"], optional = true }
libc = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, optional = true }
nvtx = { version = "1.3", optional = true }

[dev-dependencies]
# Control-plane tests exercise the public velo client.
kvbm-protocols = { workspace = true, features = ["client"] }

# Consolidator integration tests subscribe to the egress ZMQ PUB socket.
kvbm-consolidator = { workspace = true }
tmq = { workspace = true }
portpicker = "0.1"

[features]
default = ["cuda", "s3", "testing"]
# Forwards to kvbm-physical's `cuda` feature so cfg-gated CUDA-only
# call sites in this crate (e.g. `TransferOptions { cuda_stream }`) line up
# with the merged kvbm-physical surface. Mirrors kvbm-physical's default.
cuda = ["kvbm-physical/cuda"]
# Forwards to dependencies' xpu-sycl features. Mutually exclusive with
# `cuda` at the connector layer (compile_error in kvbm-connector::lib).
# kvbm-engine `src/` itself contains no cudarc-typed code outside
# `collectives/`, which is gated on `nccl` / `oneccl` independently.
xpu-sycl = [
    "kvbm-physical/xpu-sycl",
    "dynamo-device/xpu-sycl",
    "dynamo-memory/xpu-sycl",
]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:rayon", "dep:tokio-rayon", "dep:chrono"]
collectives = ["nccl"]
nccl = ["dep:cudarc"]
oneccl = ["dep:oneapi-rs"]
testing-nccl = ["collectives"]
testing-oneccl = ["oneccl"]
nats = ["dep:async-nats", "dep:flume"]
testing = ["kvbm-logical/testing", "kvbm-physical/testing"]
testing-xpu-sycl = ["testing", "xpu-sycl", "kvbm-physical/testing-xpu-sycl"]
testing-s3 = ["s3", "testing"]
nvtx = ["kvbm-config/nvtx", "dep:nvtx"]
bench = [
    "dep:clap",
    "dep:figment",
    "dep:libc",
    "dep:tracing-subscriber",
    "dep:chrono",
    "testing",
]
static-kernels = ["kvbm-physical/static-kernels"]

[[bin]]
name = "bench_engine"
path = "bin/bench_engine.rs"
required-features = ["bench"]

[[bin]]
name = "bench_collectives"
path = "bin/bench_collectives.rs"
required-features = ["bench"]

[package.metadata.cargo-machete]
ignored = ["rayon"]
