# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-hub"
version.workspace = true
edition.workspace = true
description = "Central coordination hub for KVBM velo clients (connector/engine) — HTTP PeerDiscovery + control plane"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
figment     = { version = "0.10", features = ["env", "toml", "json"] }
clap        = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }


# Velo (discovery trait, Velo facade, handlers, messenger-backed work queues)
velo        = { workspace = true, features = ["queue-messenger"] }
velo-common = { workspace = true }

# KVBM
kvbm-control-protocol = { workspace = true }
kvbm-disagg-protocol  = { workspace = true }

# Async / core
anyhow       = { workspace = true }
async-trait  = { workspace = true }
bytes        = { workspace = true }
dashmap      = { workspace = true }
futures      = { workspace = true }
parking_lot  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
uuid         = { workspace = true }

# HTTP server
axum       = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[dev-dependencies]
kvbm-common        = { workspace = true }
tokio              = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
velo-transports    = { version = "0.1.0" }
