# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-hub"
version.workspace = true
edition.workspace = true
description = "Central coordination hub for KVBM velo clients (connector/engine) — HTTP PeerDiscovery + control plane"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
figment     = { version = "0.10", features = ["env", "toml", "json"] }
clap        = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }


# Velo (discovery trait, Velo facade, handlers, messenger-backed work queues)
velo     = { workspace = true, features = ["queue-messenger"] }
velo-ext = { workspace = true }

# KVBM
kvbm-common    = { workspace = true }
kvbm-protocols = { workspace = true, features = ["client"] }
kvbm-logical   = { workspace = true }
dynamo-tokens  = { workspace = true }
# Used by the `kvbmctl` binary's `render` module to validate the emitted
# `kv_connector_extra_config` by round-tripping it through the same parser the
# connector uses. Acyclic (kvbm-config does not depend on kvbm-hub), but it
# transitively pulls dynamo-memory → cudarc (CUDA), which the CPU-only hub
# server has no business building — so it is OPTIONAL and gated behind the
# `kvbmctl` feature. The default hub library + `kvbm_hub` server stay CUDA-free.
kvbm-config    = { workspace = true, optional = true }

# KV index feature (positional block index + ZMQ event ingest)
dashmap      = { workspace = true }
rmp-serde    = { workspace = true }
tmq          = { workspace = true }

# Async / core
anyhow       = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
parking_lot  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
uuid         = { workspace = true }

# HTTP server
axum       = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[features]
# Enables the `kvbmctl` CLI and its `render` module, which validate emitted
# connector config by round-tripping through `kvbm-config` (pulls CUDA via
# dynamo-memory). Off by default so the hub server builds CUDA-free.
default = ["kvbmctl"]
kvbmctl = ["dep:kvbm-config"]

# The `kvbm_hub` server binary is auto-discovered and needs no features.
# `kvbmctl` is gated so a default build never pulls `kvbm-config`/CUDA; build it
# with `cargo run --bin kvbmctl --features kvbmctl`.
[[bin]]
name = "kvbmctl"
path = "src/bin/kvbmctl.rs"
required-features = ["kvbmctl"]

[dev-dependencies]
tokio              = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
velo-transports    = { version = "0.1.0" }
