# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-kvbm-kernels"
# Note: Not using workspace = true so this crate can be built from standalone
# workspaces (like lib/bindings/kvbm) that don't inherit main workspace metadata
version = "0.7.0"
edition = "2024"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
repository = "https://github.com/ai-dynamo/dynamo.git"
build = "build.rs"

[lib]
name = "dynamo_kvbm_kernels"
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Build kernels as a static archive (.a) instead of shared library (.so).
# When enabled, the kernel code is embedded directly into the consuming crate,
# eliminating the runtime dependency on libkvbm_kernels.so.
# Note: This only affects real CUDA builds; stubs always remain dynamic.
static-kernels = []
# Enable CUDA tests - only works when real CUDA kernels are built (not stubs)
# Tests are gated with #[cfg(all(test, feature = "testing-cuda", not(stub_kernels)))]
testing-cuda = []
# Use prebuilt kernels from cuda/prebuilt/ instead of building from source
prebuilt-kernels = []
# Generate prebuilt artifacts (fatbin, .so) and copy to cuda/prebuilt/ directory.
# This is used for creating redistributable prebuilt artifacts.
# Off by default since the .so is sufficient for normal operation.
generate-prebuilt = []

[dependencies]
# Note: Not using workspace = true so this crate can be built from standalone
# workspaces (like lib/bindings/kvbm) that don't inherit main workspace deps
cudarc = { version = "0.18.2", features = ["cuda-12020"] }
once_cell = "1.19"

[build-dependencies]
dynamo-config = { path = "../config" }
cc = "1.0"
md5 = "0.8.0"
