# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-kernels"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/ai-dynamo/dynamo.git"
build = "build.rs"

[lib]
name = "kvbm_kernels"
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Build kernels as a static archive (.a) instead of shared library (.so).
# When enabled, the kernel code is embedded directly into the consuming crate,
# eliminating the runtime dependency on libkvbm_kernels.so.
# Note: This only affects real CUDA builds; stubs always remain dynamic.
static-kernels = []

# Enable CUDA tests - only works when real CUDA kernels are built (not stubs)
# Tests are gated with #[cfg(all(test, feature = "testing-cuda", not(stub_kernels)))]
testing-cuda = []

# Enable operational_copy, universal_from_block, block_from_universal kernels.
# These kernels perform data layout permutation and are only needed for
# non-standard transfer paths. The default vectorized_copy kernel handles
# most FC↔LW transfers efficiently without permutation.
permute_kernels = []

# Enable kvbench example (pulls in clap for CLI)
kvbench = ["dep:clap"]

# Enable kvbench_xpu example (pulls in clap + syclrc for Level Zero)
kvbench-xpu = ["dep:clap", "dep:syclrc", "level-zero"]

# Expose SPIR-V vectorized_copy kernel for Level Zero / Intel XPU.
# The ze_vectorized_copy module is always compiled (it has no external deps),
# but this feature is provided so consumers can express the intent.
level-zero = ["dep:libloading"]

# SYCL kernel is now always available when level-zero is enabled.
# This feature is kept as a no-op alias for backward compatibility.
sycl-kernel = ["level-zero"]

# Enable optional L0 SPIR-V (OCL) kernel backends (vectorized, vec_indirect).
# These are provided as fallback/comparison alternatives to the default SYCL kernel.
ocl-kernel = ["level-zero"]

# Skip CUDA compilation and linking entirely (forces stub path).
# Use this when building for XPU-only targets without libcudart.
no-cuda = []

[[example]]
name = "kvbench"
required-features = ["kvbench"]

[[example]]
name = "kvbench_xpu"
required-features = ["kvbench-xpu"]

[dependencies]
cudarc = { workspace = true }

# kvbench
clap = { version = "4", features = ["derive"], optional = true }
syclrc = { path = "../../../zxue2_syclrc", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
ndarray = "0.17.2"
half = "2"
rand = { workspace = true }
cudarc = { workspace = true, features = ["f16"] }

[build-dependencies]
