# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "kvbm-kernels"
version = "0.7.0"
description = "CUDA tensor permutation and packing kernels with Python bindings"
requires-python = ">=3.8"
readme = "README.md"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
features = ["python-bindings"]
module-name = "kvbm_kernels"
