# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-physical"
version = "1.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dynamo-config = { workspace = true }
dynamo-memory = { workspace = true }
libc = { workspace = true }
kvbm-common = { workspace = true }
kvbm-kernels = { workspace = true, optional = true }
velo = { workspace = true }

aligned-vec = "0.6.4"
anyhow = { workspace = true }
bincode = { version = "2.0.0", features = ["serde", "derive"] }
blake3 = { version = "1" }
cudarc = { workspace = true, features = ["nccl"] }
oneapi-rs = { workspace = true, optional = true }
derive_builder = { workspace = true }
futures = { workspace = true }
derive-getters = { version = "0.5" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[features]
default = ["cuda"]
cuda = ["dep:kvbm-kernels"]
collectives = []
testing = []
testing-kvbm = []
testing-nixl-gds = []
testing-xpu-sycl = ["xpu-sycl"]
xpu-sycl = ["dep:kvbm-kernels", "kvbm-kernels/xpu-sycl", "dep:oneapi-rs", "dynamo-memory/xpu-sycl"]

[[bin]]
name = "validate_numa_placement"
path = "bin/validate_numa_placement.rs"
# Builds under either backend; at runtime the binary reports which backends
# were compiled in and refuses to use a backend that wasn't.

[[example]]
name = "bench_transfer"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
dynamo-memory = { workspace = true, features = ["unsafe-slices"] }
rstest = "0.26"
tokio = { workspace = true, features = ["test-util"] }
